# Hackathon-II---Todo-Spec-Driven-Development

./: .gitignore  CLAUDE.md  README.md  SECURITY.md  SETTINGS_FIX.md  docker-compose.yml  package-lock.json  start-backend-local.bat  start-backend-local.py  test_api.py
.claude/: settings.local.json
.claude/agents/: chatkit-backend-engineer.md  chatkit-frontend-engineer.md  logic-agent.md  ui-agent.md
.claude/skills/: SKILLS-INDEX.md  (+4 more)
.spec-kit/: config.yaml
Phase 1 Todo In-Memory Python Console App/: README.md
Phase 2 Full Stack Todo/: DEPLOYMENT_CONFIG.md  DEPLOYMENT_GUIDE.md  STARTUP_INSTRUCTIONS.md  TEST_CONNECTION.py
Phase 2 Full Stack Todo/backend/: .dockerignore  .env.example  README_HF.md  db.py  main.py  mcp_server.py  models.py  pyproject.toml  requirements.txt
Phase 2 Full Stack Todo/backend/middleware/: auth.py
Phase 2 Full Stack Todo/backend/routes/: export_import.py
Phase 3 Todo AI Chatbot/: CHATKIT_STATUS.md  DEMO_SCRIPT.md  DEPLOYMENT.md  QUICK_START.md  README.md  READY_FOR_TESTING.md  SKILLS_AND_AGENTS_USAGE.md  TEST_CHECKLIST.md
Phase 3 Todo AI Chatbot/backend/: .env.example  =0.27.0  ARCHITECTURE_CLARIFICATION.md  CHATKIT_INTEGRATION.md  CHATKIT_MCP_INTEGRATION.md  CHATKIT_SDK_NOTE.md  Dockerfile  FIX_401_ERRORS_FINAL.md  NETWORK_ERROR_FIXED.md  README.md  README_FIXES.md  README_HF.md  URDU_VOICE_FIX.md  agent.py  chatkit_store.py  db.py  diagnose.py  models.py  pyproject.toml  reset_password.py  reset_user_password.py  space.yaml  test_jwt_secret.sh
Phase 3 Todo AI Chatbot/backend/middleware/: auth.py
Phase 3 Todo AI Chatbot/backend/migrations/: 003_add_chat_tables.py
Phase 3 Todo AI Chatbot/backend/routes/: bulk.py  notifications.py  tasks.py  voice.py
Phase 3 Todo AI Chatbot/backend/tests/: conftest.py
Phase 3 Todo AI Chatbot/backend/tests/integration/: test_mcp_server.py
Phase 3 Todo AI Chatbot/backend/tests/unit/: test_agent.py
Phase 4 Local Kubernetes Deployment/: .gitignore  AIOPS_GUIDE.md  CHANGELOG.md  CLAUDE.md  MINIKUBE_DEPLOYMENT.md  README.md  build_images.sh  deploy-local.sh  deploy.sh  docker-compose.yml
Phase 4 Local Kubernetes Deployment/backend/: .coveragerc  .dockerignore  .env.example  =0.27.0  ARCHITECTURE_CLARIFICATION.md  CHATBOT_FIXES_SUMMARY.md  CHATKIT_INTEGRATION.md  CHATKIT_MCP_INTEGRATION.md  Dockerfile  FIX_401_ERRORS_FINAL.md  HF_SECRETS_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  NETWORK_ERROR_FIXED.md  README.md  README_FIXES.md  README_HF.md  TEST_CHAT_AGENT.py  TEST_DELETE_DIRECT.py  TEST_SCHEMA.py  activate_chatkit.py  agent.py  alembic.ini  chatkit_server.py  db.py  deploy-to-hf.sh  fix_jwt_401.md  intent_classifier.py  main.py  mcp_server.py  migrate.py  monitor_jwt.sh  pyproject.toml  pytest.ini  requirements.txt  reset_password.py  reset_user_password.py  run_migration.py  start_backend.sh  test_chatkit.py  tool_validation.py
Phase 4 Local Kubernetes Deployment/backend/alembic/: env.py
Phase 4 Local Kubernetes Deployment/backend/alembic/versions/: 2026_01_20_1300-001_initial_schema.py
Phase 4 Local Kubernetes Deployment/backend/middleware/: auth.py
Phase 4 Local Kubernetes Deployment/backend/migrations/: 002_phase2_advanced.sql
Phase 4 Local Kubernetes Deployment/backend/monitoring/: __init__.py  logging_config.py  middleware.py
Phase 4 Local Kubernetes Deployment/backend/routes/: auth.py  chat.py  chatkit.py  history.py  preferences.py  recurrence.py  search.py  stats.py
Phase 4 Local Kubernetes Deployment/backend/schemas/: __init__.py  common.py  task.py  user.py
Phase 4 Local Kubernetes Deployment/backend/tests/: __init__.py  conftest.py  test_health.py
Phase 4 Local Kubernetes Deployment/backend/tests/api/: test_auth.py  test_chat.py  test_health.py  test_tasks.py
Phase 5 Advanced Cloud Deployment/: CLAUDE.md
Phase I Todo In-Memory Python Console App/: .gitignore  pyproject.toml
docs/: COMPREHENSIVE_TEST_REPORT.md  PHASE2_ANALYSIS_AND_FIXES.md
specs/: 00-architecture.md  overview.md
(+297 files in other folders)
