[project]
name = "evolution-todo-backend"
version = "0.1.0"
description = "Evolution Todo API - Phase 2 Hackathon"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pyjwt>=2.9.0",
    "python-multipart>=0.0.21",
    "sqlmodel>=0.0.31",
    "python-dotenv>=1.0.0",
]
